--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 exclude: ['README.md']
+title: Sebastian Nadeau - Graphic Designer
+description: Sebastian Nadeau - My online portfolio showcasing the graphic design work I have done.
