feat: create pretty urls

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 exclude: ['README.md']
 title: Sebastian Nadeau - Graphic Designer
 description: Sebastian Nadeau - My online portfolio showcasing the graphic design work I have done.
+permalink: pretty
