--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 exclude: ['README.md']
-title: Sebastian Nadeau - Graphic Designer
-description: Sebastian Nadeau - My online portfolio showcasing the graphic design work I have done.
+title: Sebastian Nadeau | Graphic Designer
+description: Sebastian Nadeau - My design portfolio showcasing the graphic design work I have done.
 permalink: pretty
