--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 exclude: ['README.md']
 title: Sebastian Nadeau | Graphic Designer
-description: Sebastian Nadeau - My design portfolio showcasing the graphic design work I have done.
+description: Sebastian Nadeau - My design portfolio showcasing the graphic design work I have done in Ottawa.
 permalink: pretty
