refactor(yml): revert site to how it was

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: "http://sebastiannadeau.ca"
-baseurl: "/"
+url: "http://sebastiannadeau.ca/"
+baseurl: ""
 exclude: ['README.md']
 title: Sebastian Nadeau | Graphic Designer
 description: Sebastian Nadeau - My design portfolio showcasing the graphic design work I have done in Ottawa.
