refactor(yml): establish website url

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "http://sebastiannadeau.ca/"
+url: "http://sebastiannadeau.ca"
 baseurl: ""
 exclude: ['README.md']
 title: Sebastian Nadeau | Graphic Designer
