--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ exclude: ['README.md']
 title: Sebastian Nadeau | Graphic Designer
 description: Sebastian Nadeau - My design portfolio showcasing the graphic design work I have done in Ottawa.
 icon: /images/brand-logotype.jpg
+markdown: kramdown
 permalink: pretty
